--- a/front-end/src/app/components/todo-list/single-todo/single-todo.component.html
+++ b/front-end/src/app/components/todo-list/single-todo/single-todo.component.html
@@ -35,6 +35,6 @@
       </section>
     </section>
     <section class="author">
-      <small>{{ todo.createdByName }} @<span>{{ todo.createdByEmail }}</span></small>
+      <small>{{ todo.createdByName }}<br><span>{{ todo.createdByEmail }}</span></small>
     </section>
   </mat-card>
