--- a/front-end/src/app/components/todo-list/todo-list.component.html
+++ b/front-end/src/app/components/todo-list/todo-list.component.html
@@ -6,7 +6,7 @@
     <h2 *ngIf="($pendingTodos | async).length > 0">Tarefas pendentes</h2>
     <mat-list>
       <mat-list-item *ngFor="let todo of $pendingTodos | async">
-        <single-todo @inOutAnimationTodos [todo]="todo"></single-todo>
+        <single-todo @inOutAnimation [todo]="todo"></single-todo>
       </mat-list-item>
     </mat-list>
   </section>
@@ -14,7 +14,7 @@
     <h2 *ngIf="($completedTodos | async).length > 0">Tarefas concluídas</h2>
     <mat-list>
       <mat-list-item *ngFor="let todo of $completedTodos | async">
-        <single-todo @inOutAnimationTodos [todo]="todo"></single-todo>
+        <single-todo @inOutAnimation [todo]="todo"></single-todo>
       </mat-list-item>
     </mat-list>
   </section>
