--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -90,7 +90,7 @@ $todo-list-dark-theme: mat-dark-theme((
 
 
 html, body { height: 100%; box-sizing: border-box; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; scroll-behavior: smooth; }
 
 p,
 h1,
@@ -124,7 +124,7 @@ button[mat-button] {
 .container-lg,
 .container-md,
 .container-sm {
-  width: 100%;
+  // width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
@@ -155,4 +155,22 @@ button[mat-button] {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
   }
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 50px;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
