--- a/front-end/src/app/components/todo-list/add-todo/add-todo.component.html
+++ b/front-end/src/app/components/todo-list/add-todo/add-todo.component.html
@@ -27,17 +27,10 @@
       </mat-form-field>
       <mat-error *ngIf="form.controls.createdByEmail.errors as errors" class="did-you-mean">
         <small *ngIf="errors.isInvalid">
-          <span *ngIf="errors.apiResponse.did_you_mean">
+          <span (click)="log(errors.apiResponse)" *ngIf="errors.apiResponse.did_you_mean">
             Você quis dizer: <a (click)="correctCreatedByEmailField(errors.apiResponse.did_you_mean)" role="button"
               class="did-you-mean-a">{{
               errors.apiResponse.did_you_mean }}</a>?
-          </span>
-          <span *ngIf="!errors.apiResponse.did_you_mean">
-            Você quis dizer: <a
-              (click)="correctCreatedByEmailField(errors.apiResponse.user + '@' + (errors.apiResponse.domain || 'mail') + '.com')"
-              role="button" class="did-you-mean-a">
-              {{ errors.apiResponse.user }}@{{ errors.apiResponse.domain || 'mail' }}.com
-            </a>
           </span>
         </small>
       </mat-error>
